Fixed iPad front page layout bug

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1025,8 +1025,12 @@ Footer
 	margin: 6px 35px 0 -95px;
 }
 
+#letters-0 .need_housing_button {
+	width: 101%;
+}
+
 .need_housing_button {
-	height: 6.88em;
+	height: 124px;
 }
 
 .tile-number-unread {
